add all build architecture

--- a/TCP Bind Shell/TCP Bind Shell.csproj
+++ b/TCP Bind Shell/TCP Bind Shell.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>TCP_Bind_Shell</RootNamespace>
+    <Platforms>AnyCPU;ARM32;ARM64;x64;x86</Platforms>
   </PropertyGroup>
 
 </Project>
