--- a/TCP Reverse Shell/TCP Reverse Shell.csproj
+++ b/TCP Reverse Shell/TCP Reverse Shell.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>TCP_Reverse_Shell</RootNamespace>
     <SignAssembly>false</SignAssembly>
+    <Platforms>AnyCPU;ARM32;ARM64;x64;x86</Platforms>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
