--- a/Encryped C2C/Encrypted C2C.csproj
+++ b/Encryped C2C/Encrypted C2C.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Encryped_C2C</RootNamespace>
+    <Platforms>AnyCPU;ARM32;ARM64;x64;x86</Platforms>
   </PropertyGroup>
 
 </Project>
